syntax = "proto3";

package pb;

message CatalogPage {
    repeated Product products = 1;
    int64 totalItems = 2;
    int64 totalPages = 3;
    int64 currentPage = 4;
    int64 setPageTo = 5;
    string sorting = 6;
    string filtering = 7;
    int64 itemsPerPage = 8;
}

message Product {
    string uuid = 1;
    string title = 2;
    string description = 3;
    string longtext = 4;
    string category = 8;
    string smallImageURL = 5;
    string largeImageURL = 6;
    float price = 7;
}

message ProductUpdate {
    Product old = 1;
    Product new = 2;
}

message CheckoutContext {
    oneof checkoutContextMsg {
        CartChange cartChange = 1;
        Stock stock = 2;
        ProductUpdate productUpdate = 3;
        CartOrder cartOrder = 4;
    }
}

message CartChange {
    string cartID = 3;
    string uuid = 1;
    CartChangeAction action = 2;
}

message CartOrder {
    string cartID = 1;
}

enum CartChangeAction {
    add = 0;
    remove = 1;
}

message Stock {
    string uuid = 1;
    sint64 quantity = 2;
}
